added view resume option

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta name="twitter:image" content="https://shashank-mankala1.github.io/portfolio/img/portfolio.jpg">
 
     <!-- Favicon -->
-    <link rel=" icon" type="image/png" href="img/mylogo.png">
+    <link rel="icon" type="image/png" href="img/mylogo.png">
 
     <!-- Sitemap (optional but useful if created) -->
     <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
@@ -100,11 +100,20 @@
                             <a class="nav-link" href="#achievements">Achievements</a>
                             <a class="nav-link" href="#contact">Contact</a>
                         </nav>
-                        <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf" style="margin-left: 1rem;">
+                        <div class="resume-dropdown">
                             <button class="btn-primary desktop-only">
-                                Download Resume
+                                Resume <span class="material-symbols-outlined"
+                                    style="margin-left: 0.25rem; font-size: 1.1rem;">expand_more</span>
                             </button>
-                        </a>
+                            <div class="resume-dropdown-content">
+                                <a href="#" id="view-resume-btn" onclick="return false;">
+                                    <span class="material-symbols-outlined">visibility</span> View
+                                </a>
+                                <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf">
+                                    <span class="material-symbols-outlined">download</span> Download
+                                </a>
+                            </div>
+                        </div>
                         <!-- <button class="theme-toggle-btn" aria-label="Toggle Dark Mode">
                             <span class="material-symbols-outlined theme-icon-light">light_mode</span>
                             <span class="material-symbols-outlined theme-icon-dark"
@@ -149,6 +158,12 @@
                                     <span class="material-symbols-outlined"
                                         style="margin-left: 0.5rem; font-size: 1.25rem;">arrow_forward</span>
                                 </a>
+                                <!-- <a class="btn-lg btn-primary" href="https://leetcode.com/u/binary-beast/"
+                                    target="_blank">
+                                    LeetCode
+                                    <span class="material-symbols-outlined"
+                                        style="margin-left: 0.5rem; font-size: 1.25rem;">arrow_forward</span>
+                                </a> -->
                                 <a class="btn-lg btn-glass" href="#contact">
                                     Contact Me
                                 </a>
@@ -1066,6 +1081,55 @@
             document.documentElement.setAttribute('data-theme', newTheme);
             localStorage.setItem('theme', newTheme);
             updateIcons(newTheme);
+        });
+    </script>
+    <!-- Resume Modal -->
+    <div id="resume-modal" class="resume-modal">
+        <div class="resume-modal-content">
+            <div class="resume-modal-header">
+                <h2>Resume</h2>
+                <span class="close-modal">&times;</span>
+            </div>
+            <div class="resume-modal-body">
+                <iframe src="Resume.pdf#toolbar=0&navpanes=0" width="100%" height="500px">
+                </iframe>
+            </div>
+            <div class="resume-modal-footer">
+                <button class="btn-secondary close-modal-btn">Close</button>
+                <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf" class="btn-primary">Download</a>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Resume Modal Script
+        document.addEventListener('DOMContentLoaded', () => {
+            const modal = document.getElementById('resume-modal');
+            const viewBtn = document.getElementById('view-resume-btn');
+            const closeBtn = document.querySelector('.close-modal');
+            const closeFooterBtn = document.querySelector('.close-modal-btn');
+
+            if (viewBtn) {
+                viewBtn.addEventListener('click', (e) => {
+                    e.preventDefault();
+                    modal.style.display = 'block';
+                    document.body.style.overflow = 'hidden'; // Prevent background scrolling
+                });
+            }
+
+            const closeModal = () => {
+                modal.style.display = 'none';
+                document.body.style.overflow = 'auto'; // Restore background scrolling
+            };
+
+            if (closeBtn) closeBtn.addEventListener('click', closeModal);
+            if (closeFooterBtn) closeFooterBtn.addEventListener('click', closeModal);
+
+            window.addEventListener('click', (e) => {
+                if (e.target == modal) {
+                    closeModal();
+                }
+            });
         });
     </script>
 </body>
