--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>All Projects | Shashank Data Scientist</title>
+    <title>All Projects | Shashank Mankala | Data Scientist | ML & Generative AI Engineer</title>
     <meta name="title" content="Shashank Mankala | Data Scientist | ML & Generative AI Engineer">
-    <meta name="description" content="Projects | Shashank Data Scientist">
+    <meta name="description" content="Projects | Shashank Mankala | Data Scientist | ML & Generative AI Engineer">
     <meta name="keywords" content="Shashank Mankala, Data Scientist, ML & Generative AI Engineer, Projects">
     <meta name="author" content="Shashank Mankala">
     <meta name="robots" content="index, follow">
 
-    <link rel=" icon" type="image/png" href="img/mylogo.png">
+    <link rel="icon" type="image/png" href="img/mylogo.png">
 
 
 
@@ -57,11 +57,11 @@
                                 Download Resume
                             </button>
                         </a>
-                        <button class="theme-toggle-btn" aria-label="Toggle Dark Mode">
+                        <!-- <button class="theme-toggle-btn" aria-label="Toggle Dark Mode">
                             <span class="material-symbols-outlined theme-icon-light">light_mode</span>
                             <span class="material-symbols-outlined theme-icon-dark"
                                 style="display:none;">dark_mode</span>
-                        </button>
+                        </button> -->
                     </div>
                     <button class="mobile-menu-btn">
                         <span class="material-symbols-outlined">menu</span>
