added redirections to company and university

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                                 <span class="timeline-year">Sep 2025 - Dec 2025</span>
                             </div>
 
-                            <div class="timeline-company">New Era Cap | Buffalo, United States</div>
+                            <div class="timeline-company"><a href="https://www.neweracap.com/" target="_blank"> New Era Cap | Buffalo, United States <span class="material-symbols-outlined" style="font-size: 0.875rem; margin: 0 0.25rem; vertical-align: middle;">open_in_new</span></a></div>
 
                             <p style="color: var(--text-gray-300); margin-bottom: 1rem;">
                                 Built and deployed an end-to-end demand forecasting system using Snowflake and Python,
@@ -614,7 +614,7 @@
                                 <span class="timeline-year">Dec 2023 - Jul 2024</span>
                             </div>
 
-                            <div class="timeline-company">Shadowfax | Bangalore, India</div>
+                            <div class="timeline-company"><a href="https://www.shadowfax.in/" target="_blank">Shadowfax | Bangalore, India <span class="material-symbols-outlined" style="font-size: 0.875rem; margin: 0 0.25rem; vertical-align: middle;">open_in_new</span></a></div>
 
                             <p style="color: var(--text-gray-300); margin-bottom: 1rem;">
                                 Led data-driven cost, productivity, and performance optimization initiatives across
@@ -647,7 +647,7 @@
                                 <span class="timeline-year">Jun 2022 - Jun 2023</span>
                             </div>
 
-                            <div class="timeline-company">Frugal Testing | Hyderabad, India</div>
+                            <div class="timeline-company"><a href="https://www.frugaltesting.com/" target="_blank">Frugal Testing | Hyderabad, India <span class="material-symbols-outlined" style="font-size: 0.875rem; margin: 0 0.25rem; vertical-align: middle;">open_in_new</span></a></div>
 
                             <p style="color: var(--text-gray-300); margin-bottom: 1rem;">
                                 Contributed to enterprise-scale software delivery for ONELERN and NPCI, working across
@@ -692,8 +692,8 @@
                             </div>
                             <h3 style="font-size: 1.25rem; font-weight: 700; margin-bottom: 0.5rem;">M.S. in Data
                                 Science</h3>
-                            <p style="color: var(--primary); font-weight: 500; margin-bottom: 1rem;">University at
-                                Buffalo (SUNY)</p>
+                            <p style="color: var(--primary); font-weight: 500; margin-bottom: 1rem;"><a href="https://www.buffalo.edu/" target="_blank">University at
+                                Buffalo (SUNY) <span class="material-symbols-outlined" style="font-size: 0.875rem; margin: 0 0.25rem; vertical-align: middle;">open_in_new</span></a></p>
                             <p style="font-size: 0.875rem; color: var(--text-slate-500);">
                                 Specialization in Machine Learning and Artificial Intelligence.
                                 Interned at New Era Cap as an Data Scientist.
@@ -709,8 +709,8 @@
                             </div>
                             <h3 style="font-size: 1.25rem; font-weight: 700; margin-bottom: 0.5rem;">BTech. in Computer
                                 Science and Engineering </h3>
-                            <p style="color: var(--primary); font-weight: 500; margin-bottom: 1rem;">Lovely Professional
-                                University</p>
+                            <p style="color: var(--primary); font-weight: 500; margin-bottom: 1rem;"><a href="https://www.lpu.in/" target="_blank">Lovely Professional
+                                University <span class="material-symbols-outlined" style="font-size: 0.875rem; margin: 0 0.25rem; vertical-align: middle;">open_in_new</span></a></p>
                             <p style="font-size: 0.875rem; color: var(--text-slate-500);">
                                 Engineering Major: Data Science.
                                 <br />GPA: 3.8/4.0
